new features: in the folder 'triggers' I have added 3 files with which it fulfills the function of creating a reading with some conditions. e.g:'no allow higher than 60 (C) or lower than -60 (C)','humidity cannot be more than 100%', & 'Create or Update the location value(Device Name) of a reading if the (Longitude) & (Latitude) values are Updated'.
